fixed for running in google colab

--- a/code/Deutsch-Jozsa Algorithm/Deutsch-Jozsa Algorithm.ipynb
+++ b/code/Deutsch-Jozsa Algorithm/Deutsch-Jozsa Algorithm.ipynb
@@ -15,17 +15,19 @@
     }
    ],
    "source": [
+    "%pip --quiet install qiskit pylatexenc\n",
     "%matplotlib inline\n",
+    "\n",
     "# Importing standard Qiskit libraries and configuring account\n",
     "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister, execute, Aer, IBMQ\n",
     "from qiskit.compiler import transpile, assemble\n",
     "from qiskit.tools.jupyter import *\n",
     "from qiskit.visualization import *\n",
-    "from qiskit_textbook.tools import random_state\n",
     "from qiskit.extensions import Initialize\n",
     "from random import choice\n",
+    "\n",
     "# Loading your IBM Q account(s)\n",
-    "IBMQ.load_account()\n",
+    "# IBMQ.load_account()\n",
     "backend = Aer.get_backend('qasm_simulator')"
    ]
   },
@@ -90,7 +92,7 @@
     "# Measure\n",
     "qc.measure(range(len(bowl)), range(len(bowl)))\n",
     "\n",
-    "qc.draw()"
+    "qc.draw('mpl')"
    ]
   },
   {
@@ -119,8 +121,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.6 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "d9af2e32a5ad6e5c5f98229481d7f4ca3d60c1f6ad52fd9ba4da285d14500705"
+    }
+   },
    "name": "python3"
   },
   "language_info": {
@@ -133,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
