--- a/code/Grover's Algorithm/Grover's Algorithm.ipynb
+++ b/code/Grover's Algorithm/Grover's Algorithm.ipynb
@@ -15,15 +15,19 @@
     }
    ],
    "source": [
+    "%pip --quiet install qiskit pylatexenc\n",
     "%matplotlib inline\n",
+    "\n",
     "# Importing standard Qiskit libraries and configuring account\n",
     "from qiskit import QuantumCircuit, execute, Aer, IBMQ\n",
     "from qiskit.compiler import transpile, assemble\n",
     "from qiskit.quantum_info import Operator\n",
     "from qiskit.tools.jupyter import *\n",
     "from qiskit.visualization import *\n",
+    "\n",
     "# Loading your IBM Q account(s)\n",
-    "provider = IBMQ.load_account()"
+    "# IBMQ.load_account()\n",
+    "backend = Aer.get_backend('qasm_simulator')"
    ]
   },
   {
@@ -174,9 +178,7 @@
    "source": [
     "grover_circuit.measure_all()\n",
     "\n",
-    "qasm_simulator = Aer.get_backend('qasm_simulator')\n",
-    "shots = 1024\n",
-    "results = execute(grover_circuit, backend=qasm_simulator, shots=shots).result()\n",
+    "results = execute(grover_circuit, backend=backend).result()\n",
     "answer = results.get_counts()\n",
     "plot_histogram(answer)"
    ]
@@ -184,8 +186,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.6 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "d9af2e32a5ad6e5c5f98229481d7f4ca3d60c1f6ad52fd9ba4da285d14500705"
+    }
+   },
    "name": "python3"
   },
   "language_info": {
@@ -198,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
