--- a/code/Quantum Teleportation/Quantum Teleportation.ipynb
+++ b/code/Quantum Teleportation/Quantum Teleportation.ipynb
@@ -15,7 +15,9 @@
     }
    ],
    "source": [
+    "%pip --quiet install qiskit pylatexenc\n",
     "%matplotlib inline\n",
+    "\n",
     "# Importing standard Qiskit libraries and configuring account\n",
     "from qiskit import QuantumCircuit, QuantumRegister, ClassicalRegister, execute, Aer, IBMQ\n",
     "from qiskit.compiler import transpile, assemble\n",
@@ -23,8 +25,9 @@
     "from qiskit.visualization import *\n",
     "from qiskit_textbook.tools import random_state\n",
     "from qiskit.extensions import Initialize\n",
+    "\n",
     "# Loading your IBM Q account(s)\n",
-    "IBMQ.load_account()\n",
+    "# IBMQ.load_account()\n",
     "backend = Aer.get_backend('qasm_simulator')"
    ]
   },
@@ -94,7 +97,7 @@
     "qc.measure(2, 2)\n",
     "\n",
     "# Display the circuit\n",
-    "qc.draw()"
+    "qc.draw('mpl')"
    ]
   },
   {
@@ -123,8 +126,12 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.6 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "d9af2e32a5ad6e5c5f98229481d7f4ca3d60c1f6ad52fd9ba4da285d14500705"
+    }
+   },
    "name": "python3"
   },
   "language_info": {
@@ -137,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.6-final"
   }
  },
  "nbformat": 4,
