--- a/code/Shor's Algorithm/Shor's Algorithm.ipynb
+++ b/code/Shor's Algorithm/Shor's Algorithm.ipynb
@@ -15,6 +15,7 @@
     }
    ],
    "source": [
+    "%pip --quiet install qiskit pylatexenc\n",
     "%matplotlib inline\n",
     "# Importing standard Qiskit libraries and configuring account\n",
     "from qiskit import QuantumCircuit, execute, Aer, IBMQ\n",
@@ -25,7 +26,8 @@
     "from random import randint, seed\n",
     "from numpy import gcd\n",
     "# Loading your IBM Q account(s)\n",
-    "provider = IBMQ.load_account()"
+    "# IBMQ.load_account()\n",
+    "backend = Aer.get_backend('qasm_simulator')"
    ]
   },
   {
@@ -166,7 +168,6 @@
     }
    ],
    "source": [
-    "simulator = Aer.get_backend('qasm_simulator')\n",
     "counts = execute(qc, backend=simulator).result().get_counts(qc)\n",
     "\n",
     "plot_histogram(counts)"
@@ -181,7 +182,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Measured periods:\t0\t4\t8\t12\t"
+      "Measured periods:\t0\t4\t8\t12"
      ]
     }
    ],
