added qiskit textbook

--- a/code/Grover's Algorithm/Grover's Algorithm.ipynb
+++ b/code/Grover's Algorithm/Grover's Algorithm.ipynb
@@ -14,7 +14,7 @@
     }
    ],
    "source": [
-    "%pip --quiet install qiskit pylatexenc\n",
+    "%pip --quiet install qiskit pylatexenc git+https://github.com/qiskit-community/qiskit-textbook.git#subdirectory=qiskit-textbook-src\n",
     "%matplotlib inline\n",
     "\n",
     "# Importing standard Qiskit libraries and configuring account\n",
