--- a/code/Other/fairy markov.ipynb
+++ b/code/Other/fairy markov.ipynb
@@ -50,7 +50,9 @@
    "outputs": [],
    "source": [
     "text = ''\n",
-    "for file in glob('corpus/*.txt'):\n",
+    "for file in glob('corpus/*'):\n",
+    "    if 'preface' in file.lower():\n",
+    "        print(file)\n",
     "    text += open(file, 'r', encoding='utf8').read() + '\\n'"
    ]
   },
@@ -149,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "window = 5\n",
+    "window = 4\n",
     "# text = open('tales.txt', 'r', encoding='utf8').read()\n",
     "\n",
     "d = marginalize(text, int(window))"
@@ -171,7 +173,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1: once upon a time there was a wicked sprite indeed he was the most unjust and churlish of all the enchanters and magicians that they might try to find out \n\n2: once upon a time there was a king who had three daughters was once setting out upon a journey but before he went he asked each daughter what gift he \n\n3: once upon a time there were three princes who had a one day they all three told their mother they meant to get married to which their mother replied do \n\n4: once upon a time there lived a poor knight who had a great fancy to bargain for the horse and the bird and went home to bed without saying a \n\n5: once upon a time there lived in hindustan two kings whose countries bordered upon each other but as the years went on but the never once looked at the the \n\n"
+      "1: once upon a time the maiden sat down too and the knight of the glen s wild steed of bells and a clattering of horses hoofs whereat starting up \n\n2: once upon a time a little boy and her heart was far away and i got away as soon as he had expected the peas had taken root in \n\n3: once upon a time when was reigning in benares and when he had wandered about for many hours at the beautiful elderbush a row of beautiful pillars led to \n\n4: once upon a time there were two voices the boy from over the sea look into my right ear but i have taken on myself to remind your highness \n\n5: once upon a time there lived a woman some distance up came an enormous bull so fat that they could by no means replied maimoune i have no flute \n\n"
      ]
     }
    ],
@@ -180,7 +182,7 @@
     "n_sents = 5\n",
     "\n",
     "for i in range(n_sents):\n",
-    "    chain = ['once', 'upon', 'a', 'time', 'there']\n",
+    "    chain = ['once', 'upon', 'a', 'time']\n",
     "    for j in range(n_words):\n",
     "        window_d = chain[1 - window:]\n",
     "        d_t = d[window_d[0]]\n",
@@ -298,60 +300,41 @@
      "data": {
       "text/plain": [
        "{'rubbl': ['rubble'],\n",
-       " 'medium': ['medium'],\n",
-       " 'sodden': ['sodden'],\n",
-       " 'cipher': ['cipher'],\n",
-       " 'swivel': ['swiveled'],\n",
-       " 'scan': ['scan'],\n",
-       " 'specif': ['specifically'],\n",
-       " 'congress': ['congress'],\n",
-       " 'coincident': ['coincidentally', 'coincidental'],\n",
-       " 'travi': ['travis'],\n",
-       " 'copyright': ['copyright'],\n",
-       " 'hairpin': ['hairpin'],\n",
-       " 'comput': ['computation', 'computer'],\n",
-       " 'fictiti': ['fictitiously'],\n",
-       " 'record': ['recording'],\n",
-       " 'uncloth': ['unclothed'],\n",
-       " 'encod': ['encode'],\n",
-       " 'retriev': ['retrieval'],\n",
-       " 'millennia': ['millennia'],\n",
-       " 'classic': ['classic', 'classical'],\n",
-       " 'electron': ['electronic'],\n",
-       " 'li': ['li'],\n",
-       " 'unscrambl': ['unscramble'],\n",
-       " 'rand': ['rand'],\n",
+       " 'unord': ['unordered'],\n",
+       " 'focus': ['focus'],\n",
        " 'ocher': ['ocher'],\n",
        " 'rematch': ['rematch'],\n",
-       " 'peek': ['peek'],\n",
-       " 'photon': ['photon'],\n",
-       " 'item': ['item'],\n",
-       " 'skid': ['skidding'],\n",
-       " 'function': ['function'],\n",
-       " 'paperback': ['paperback'],\n",
-       " 'unord': ['unordered'],\n",
-       " 'product': ['product'],\n",
-       " 'browser': ['browser'],\n",
-       " 'shor': ['shor'],\n",
-       " 'encrypt': ['encrypt'],\n",
-       " 'code': ['code'],\n",
-       " 'slowpok': ['slowpoke'],\n",
-       " 'zigzag': ['zigzagged'],\n",
-       " 'focus': ['focus'],\n",
-       " 'typic': ['typical'],\n",
-       " 'hanna': ['hanna'],\n",
-       " 'notebook': ['notebook'],\n",
-       " 'unitari': ['unitary'],\n",
-       " 'bibliographi': ['bibliography'],\n",
-       " 'protagonist': ['protagonist'],\n",
-       " 'deepen': ['deepening'],\n",
        " 'amplifi': ['amplify'],\n",
-       " 'currenc': ['currency'],\n",
-       " 'edit': ['edition'],\n",
        " 'repositori': ['repository'],\n",
+       " 'unitari': ['unitary'],\n",
+       " 'typic': ['typical'],\n",
+       " 'comput': ['computation', 'computer'],\n",
+       " 'notebook': ['notebook'],\n",
+       " 'rand': ['rand'],\n",
+       " 'algorithm': ['algorithm'],\n",
+       " 'fictiti': ['fictitiously'],\n",
+       " 'hanna': ['hanna'],\n",
+       " 'encod': ['encode'],\n",
+       " 'protagonist': ['protagonist'],\n",
+       " 'millennia': ['millennia'],\n",
+       " 'unscrambl': ['unscramble'],\n",
+       " 'copyright': ['copyright'],\n",
+       " 'browser': ['browser'],\n",
+       " 'specif': ['specifically'],\n",
        " 'modulus': ['modulus'],\n",
+       " 'shor': ['shor'],\n",
        " 'feedback': ['feedback'],\n",
-       " 'algorithm': ['algorithm']}"
+       " 'paperback': ['paperback'],\n",
+       " 'skid': ['skidding'],\n",
+       " 'photon': ['photon'],\n",
+       " 'electron': ['electronic'],\n",
+       " 'slowpok': ['slowpoke'],\n",
+       " 'encrypt': ['encrypt'],\n",
+       " 'cipher': ['cipher'],\n",
+       " 'uncloth': ['unclothed'],\n",
+       " 'coincident': ['coincidental', 'coincidentally'],\n",
+       " 'travi': ['travis'],\n",
+       " 'bibliographi': ['bibliography']}"
       ]
      },
      "metadata": {},
