--- a/code/Other/fairy markov.ipynb
+++ b/code/Other/fairy markov.ipynb
@@ -173,7 +173,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1: once upon a time the maiden sat down too and the knight of the glen s wild steed of bells and a clattering of horses hoofs whereat starting up \n\n2: once upon a time a little boy and her heart was far away and i got away as soon as he had expected the peas had taken root in \n\n3: once upon a time when was reigning in benares and when he had wandered about for many hours at the beautiful elderbush a row of beautiful pillars led to \n\n4: once upon a time there were two voices the boy from over the sea look into my right ear but i have taken on myself to remind your highness \n\n5: once upon a time there lived a woman some distance up came an enormous bull so fat that they could by no means replied maimoune i have no flute \n\n"
+      "1: once upon a time there was a great feast what do you want you must answer cherries and when he found himself in a room bare except for one \n\n2: once upon a time in husband said she it is zizi exclaimed desire who entered at this moment the came up to the woodman and when i call you \n\n3: once upon a time a soldier who for many years at last i begged her not to tell thy wife the truth for seven years and now has blinded \n\n4: once upon a time the king gave them presents of silver and glittered and sparkled with all colours so beautifully that the children stood still and waited leaning on \n\n5: once upon a time three waggons of gold and precious stones there were also several small chickens running about and hunger he fell asleep the sun had grown low \n\n"
      ]
     }
    ],
@@ -299,42 +299,43 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'rubbl': ['rubble'],\n",
-       " 'unord': ['unordered'],\n",
-       " 'focus': ['focus'],\n",
-       " 'ocher': ['ocher'],\n",
-       " 'rematch': ['rematch'],\n",
-       " 'amplifi': ['amplify'],\n",
-       " 'repositori': ['repository'],\n",
-       " 'unitari': ['unitary'],\n",
-       " 'typic': ['typical'],\n",
-       " 'comput': ['computation', 'computer'],\n",
-       " 'notebook': ['notebook'],\n",
-       " 'rand': ['rand'],\n",
-       " 'algorithm': ['algorithm'],\n",
-       " 'fictiti': ['fictitiously'],\n",
-       " 'hanna': ['hanna'],\n",
-       " 'encod': ['encode'],\n",
-       " 'protagonist': ['protagonist'],\n",
-       " 'millennia': ['millennia'],\n",
-       " 'unscrambl': ['unscramble'],\n",
-       " 'copyright': ['copyright'],\n",
-       " 'browser': ['browser'],\n",
-       " 'specif': ['specifically'],\n",
-       " 'modulus': ['modulus'],\n",
-       " 'shor': ['shor'],\n",
-       " 'feedback': ['feedback'],\n",
+       "{'shor': ['shor'],\n",
        " 'paperback': ['paperback'],\n",
        " 'skid': ['skidding'],\n",
-       " 'photon': ['photon'],\n",
-       " 'electron': ['electronic'],\n",
+       " 'feedback': ['feedback'],\n",
+       " 'encod': ['encode'],\n",
+       " 'specif': ['specifically'],\n",
        " 'slowpok': ['slowpoke'],\n",
-       " 'encrypt': ['encrypt'],\n",
        " 'cipher': ['cipher'],\n",
-       " 'uncloth': ['unclothed'],\n",
+       " 'hanna': ['hanna'],\n",
+       " 'electron': ['electronic'],\n",
+       " 'unscrambl': ['unscramble'],\n",
+       " 'focus': ['focus'],\n",
+       " 'fictiti': ['fictitiously'],\n",
+       " 'unitari': ['unitary'],\n",
+       " 'unord': ['unordered'],\n",
+       " 'edit': ['edition'],\n",
+       " 'bibliographi': ['bibliography'],\n",
+       " 'photon': ['photon'],\n",
+       " 'notebook': ['notebook'],\n",
        " 'coincident': ['coincidental', 'coincidentally'],\n",
        " 'travi': ['travis'],\n",
-       " 'bibliographi': ['bibliography']}"
+       " 'encrypt': ['encrypt'],\n",
+       " 'uncloth': ['unclothed'],\n",
+       " 'amplifi': ['amplify'],\n",
+       " 'rubbl': ['rubble'],\n",
+       " 'copyright': ['copyright'],\n",
+       " 'rematch': ['rematch'],\n",
+       " 'browser': ['browser'],\n",
+       " 'rand': ['rand'],\n",
+       " 'protagonist': ['protagonist'],\n",
+       " 'ocher': ['ocher'],\n",
+       " 'comput': ['computer', 'computation'],\n",
+       " 'typic': ['typical'],\n",
+       " 'modulus': ['modulus'],\n",
+       " 'millennia': ['millennia'],\n",
+       " 'repositori': ['repository'],\n",
+       " 'algorithm': ['algorithm']}"
       ]
      },
      "metadata": {},
