--- a/code/Other/fairy markov.ipynb
+++ b/code/Other/fairy markov.ipynb
@@ -173,7 +173,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1: once upon a time there was a great feast what do you want you must answer cherries and when he found himself in a room bare except for one \n\n2: once upon a time in husband said she it is zizi exclaimed desire who entered at this moment the came up to the woodman and when i call you \n\n3: once upon a time a soldier who for many years at last i begged her not to tell thy wife the truth for seven years and now has blinded \n\n4: once upon a time the king gave them presents of silver and glittered and sparkled with all colours so beautifully that the children stood still and waited leaning on \n\n5: once upon a time three waggons of gold and precious stones there were also several small chickens running about and hunger he fell asleep the sun had grown low \n\n"
+      "1: once upon a time a woman voice we are ready to wager that in all his movements he made it of bent willows and covered it over and over \n\n2: once upon a time there was a crash as if the stream would not take it amiss said his wife never mind old tom well as i do i \n\n3: once upon a time there was an outbreak of admiration the enthusiasm became general and none escaped but they who were not so good as to let me stay \n\n4: once upon a time in china there lived a woman some girls a dog a cat and the man seeing that he was ill at ease for the channel \n\n5: once upon a time a poor peasant who sat in the evening safe and well and so happy she could not use the poor child feels lost and unhappy \n\n"
      ]
     }
    ],
@@ -299,43 +299,44 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'shor': ['shor'],\n",
-       " 'paperback': ['paperback'],\n",
-       " 'skid': ['skidding'],\n",
-       " 'feedback': ['feedback'],\n",
+       "{'specif': ['specifically'],\n",
+       " 'coincident': ['coincidental', 'coincidentally'],\n",
+       " 'encrypt': ['encrypt'],\n",
+       " 'travi': ['travis'],\n",
        " 'encod': ['encode'],\n",
-       " 'specif': ['specifically'],\n",
+       " 'paperback': ['paperback'],\n",
+       " 'uncloth': ['unclothed'],\n",
+       " 'rematch': ['rematch'],\n",
+       " 'fictiti': ['fictitiously'],\n",
+       " 'unord': ['unordered'],\n",
+       " 'copyright': ['copyright'],\n",
+       " 'edit': ['edition'],\n",
+       " 'browser': ['browser'],\n",
+       " 'focus': ['focus'],\n",
+       " 'hanna': ['hanna'],\n",
+       " 'repositori': ['repository'],\n",
+       " 'unitari': ['unitary'],\n",
+       " 'typic': ['typical'],\n",
+       " 'notebook': ['notebook'],\n",
+       " 'shor': ['shor'],\n",
+       " 'protagonist': ['protagonist'],\n",
        " 'slowpok': ['slowpoke'],\n",
        " 'cipher': ['cipher'],\n",
-       " 'hanna': ['hanna'],\n",
-       " 'electron': ['electronic'],\n",
-       " 'unscrambl': ['unscramble'],\n",
-       " 'focus': ['focus'],\n",
-       " 'fictiti': ['fictitiously'],\n",
-       " 'unitari': ['unitary'],\n",
-       " 'unord': ['unordered'],\n",
-       " 'edit': ['edition'],\n",
-       " 'bibliographi': ['bibliography'],\n",
-       " 'photon': ['photon'],\n",
-       " 'notebook': ['notebook'],\n",
-       " 'coincident': ['coincidental', 'coincidentally'],\n",
-       " 'travi': ['travis'],\n",
-       " 'encrypt': ['encrypt'],\n",
-       " 'uncloth': ['unclothed'],\n",
        " 'amplifi': ['amplify'],\n",
-       " 'rubbl': ['rubble'],\n",
-       " 'copyright': ['copyright'],\n",
-       " 'rematch': ['rematch'],\n",
-       " 'browser': ['browser'],\n",
+       " 'skid': ['skidding'],\n",
        " 'rand': ['rand'],\n",
-       " 'protagonist': ['protagonist'],\n",
-       " 'ocher': ['ocher'],\n",
-       " 'comput': ['computer', 'computation'],\n",
-       " 'typic': ['typical'],\n",
-       " 'modulus': ['modulus'],\n",
+       " 'photon': ['photon'],\n",
+       " 'unscrambl': ['unscramble'],\n",
        " 'millennia': ['millennia'],\n",
-       " 'repositori': ['repository'],\n",
-       " 'algorithm': ['algorithm']}"
+       " 'comput': ['computation', 'computer'],\n",
+       " 'feedback': ['feedback'],\n",
+       " 'modulus': ['modulus'],\n",
+       " 'algorithm': ['algorithm'],\n",
+       " 'ocher': ['ocher'],\n",
+       " 'introspect': ['introspective'],\n",
+       " 'electron': ['electronic'],\n",
+       " 'rubbl': ['rubble'],\n",
+       " 'bibliographi': ['bibliography']}"
       ]
      },
      "metadata": {},
@@ -363,7 +364,7 @@
     }
    ],
    "source": [
-    "check_fairy_word(\"modest\")"
+    "check_fairy_word(\"mockery\")"
    ]
   }
  ],
