slightly improved code organization

--- a/code/Other/fairy markov.ipynb
+++ b/code/Other/fairy markov.ipynb
@@ -28,11 +28,12 @@
     "# nltk.download('punkt')\n",
     "# nltk.download('stopwords')\n",
     "# nltk.download('words')\n",
+    "# nltk.download('averaged_perceptron_tagger')\n",
     "stopwords = nltk.corpus.stopwords.words('english')\n",
-    "import re\n",
+    "word_list = nltk.corpus.words.words()\n",
+    "stemmer = nltk.stem.snowball.SnowballStemmer(\"english\")\n",
     "\n",
     "from numpy import random, array\n",
-    "\n",
     "from urllib import request"
    ]
   },
@@ -51,8 +52,6 @@
    "source": [
     "text = ''\n",
     "for file in glob('corpus/*'):\n",
-    "    if 'preface' in file.lower():\n",
-    "        print(file)\n",
     "    text += open(file, 'r', encoding='utf8').read() + '\\n'"
    ]
   },
@@ -79,8 +78,89 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Word List"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scifi_text = ''\n",
+    "for file in glob('/Users/splch/Desktop/opposite/*'):\n",
+    "    scifi_text += open(file, 'r', encoding='utf8').read() + '\\n'\n",
+    "scifi_text = clean(scifi_text)\n",
+    "scifi_stems = set(map(stemmer.stem, map(str.lower, set(scifi_text.split(' ')))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 196671/196671 [05:40<00:00, 578.32it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = {}\n",
+    "for sent in tqdm(nltk.sent_tokenize(text)):\n",
+    "    s = sub(r'\\s+', ' ', sent)\n",
+    "    s = nltk.pos_tag(nltk.word_tokenize(s))\n",
+    "    for word, pos in s:\n",
+    "        stem = stemmer.stem(word).lower()\n",
+    "        if word not in stopwords and word.isalpha() and stem not in scifi_stems:\n",
+    "            if stem not in words:\n",
+    "                words[stem] = {(word.lower(), pos): 1}\n",
+    "            else:\n",
+    "                words[stem][(word.lower(), pos)] = words[stem].get((word.lower(), pos), 0) + 1\n",
+    "words_dict = words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_list = {}\n",
+    "for stem_key, stem_value in words_dict.items():\n",
+    "    count = 0\n",
+    "    big = ('', 0)\n",
+    "    for word_key, word_value in stem_value.items():\n",
+    "        if word_value > count:\n",
+    "            big = word_key\n",
+    "            count = word_value\n",
+    "\n",
+    "    if count > final_list.get(big[0], ('', 0))[1]:\n",
+    "        final_list[big[0]] = (big[1], count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('fairy_tale_words.txt', 'w') as f:\n",
+    "    for item in sorted(final_list.items(), key=lambda x: -x[1][1]):\n",
+    "        if item[1][1] > 10:\n",
+    "            f.write(f'{item[0]}: {item[1][0]}, {item[1][1]}\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,14 +246,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "1: once upon a time a woman voice we are ready to wager that in all his movements he made it of bent willows and covered it over and over \n\n2: once upon a time there was a crash as if the stream would not take it amiss said his wife never mind old tom well as i do i \n\n3: once upon a time there was an outbreak of admiration the enthusiasm became general and none escaped but they who were not so good as to let me stay \n\n4: once upon a time in china there lived a woman some girls a dog a cat and the man seeing that he was ill at ease for the channel \n\n5: once upon a time a poor peasant who sat in the evening safe and well and so happy she could not use the poor child feels lost and unhappy \n\n"
+      "1: once upon a time an old woman putting out her lanterns you will light the candle for you and then he said o heavens why have not my mother \n",
+      "\n",
+      "2: once upon a time there was a fierce beast is in my iwanich thanked the old man thought in his mind while people were asleep he went out cut \n",
+      "\n",
+      "3: once upon a time there was a fire in my veins doth flow yet i laugh and sing the nurse asked the boatman can you take the fellow out \n",
+      "\n",
+      "4: once upon a time there lived an emperor whose name was souci and he had not gone far before he met a squirrel who bowed and hid it in \n",
+      "\n",
+      "5: once upon a time there was a big palmyra tree lying on the road the snow was so wet it certainly must have come from and how you came \n",
+      "\n"
      ]
     }
    ],
@@ -206,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -238,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,13 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.stem.snowball import SnowballStemmer\n",
-    "stemmer = SnowballStemmer(\"english\")\n",
-    "\n",
     "fairy_stems = set(map(stemmer.stem, set(text.split(' '))))\n",
     "\n",
     "def check_fairy_word(word):\n",
@@ -273,13 +359,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from nltk.corpus import words\n",
-    "word_list = words.words()\n",
-    "\n",
     "check_words = {}\n",
     "for word in outlier_words:\n",
     "    stem = stemmer.stem(word)\n",
@@ -292,55 +375,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "{'specif': ['specifically'],\n",
-       " 'coincident': ['coincidental', 'coincidentally'],\n",
-       " 'encrypt': ['encrypt'],\n",
-       " 'travi': ['travis'],\n",
-       " 'encod': ['encode'],\n",
-       " 'paperback': ['paperback'],\n",
-       " 'uncloth': ['unclothed'],\n",
-       " 'rematch': ['rematch'],\n",
-       " 'fictiti': ['fictitiously'],\n",
-       " 'unord': ['unordered'],\n",
-       " 'copyright': ['copyright'],\n",
-       " 'edit': ['edition'],\n",
-       " 'browser': ['browser'],\n",
-       " 'focus': ['focus'],\n",
-       " 'hanna': ['hanna'],\n",
-       " 'repositori': ['repository'],\n",
-       " 'unitari': ['unitary'],\n",
-       " 'typic': ['typical'],\n",
-       " 'notebook': ['notebook'],\n",
-       " 'shor': ['shor'],\n",
-       " 'protagonist': ['protagonist'],\n",
-       " 'slowpok': ['slowpoke'],\n",
-       " 'cipher': ['cipher'],\n",
-       " 'amplifi': ['amplify'],\n",
-       " 'skid': ['skidding'],\n",
-       " 'rand': ['rand'],\n",
-       " 'photon': ['photon'],\n",
-       " 'unscrambl': ['unscramble'],\n",
-       " 'millennia': ['millennia'],\n",
-       " 'comput': ['computation', 'computer'],\n",
-       " 'feedback': ['feedback'],\n",
-       " 'modulus': ['modulus'],\n",
-       " 'algorithm': ['algorithm'],\n",
-       " 'ocher': ['ocher'],\n",
-       " 'introspect': ['introspective'],\n",
-       " 'electron': ['electronic'],\n",
-       " 'rubbl': ['rubble'],\n",
-       " 'bibliographi': ['bibliography']}"
-      ]
+      "text/plain": "{'protagonist': ['protagonist'],\n 'electron': ['electronic'],\n 'modulus': ['modulus'],\n 'cipher': ['cipher'],\n 'hanna': ['hanna'],\n 'unitari': ['unitary'],\n 'encod': ['encode'],\n 'comput': ['computation', 'computer'],\n 'rand': ['rand'],\n 'coincident': ['coincidentally', 'coincidental'],\n 'amplifi': ['amplify'],\n 'rubbl': ['rubble'],\n 'travi': ['travis'],\n 'repositori': ['repository'],\n 'copyright': ['copyright'],\n 'uncloth': ['unclothed'],\n 'ocher': ['ocher'],\n 'paperback': ['paperback'],\n 'rematch': ['rematch'],\n 'millennia': ['millennia'],\n 'browser': ['browser'],\n 'introspect': ['introspective'],\n 'skid': ['skidding'],\n 'algorithm': ['algorithm'],\n 'feedback': ['feedback'],\n 'focus': ['focus'],\n 'encrypt': ['encrypt'],\n 'shor': ['shor'],\n 'unscrambl': ['unscramble'],\n 'edit': ['edition'],\n 'slowpok': ['slowpoke'],\n 'unord': ['unordered'],\n 'fictiti': ['fictitiously'],\n 'photon': ['photon'],\n 'typic': ['typical'],\n 'notebook': ['notebook'],\n 'specif': ['specifically'],\n 'bibliographi': ['bibliography']}"
      },
+     "execution_count": 17,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -349,34 +393,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "True"
-      ]
+      "text/plain": "True"
      },
+     "execution_count": 18,
      "metadata": {},
-     "execution_count": 14
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "check_fairy_word(\"mockery\")"
+    "check_fairy_word(\"breakfast\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
    "display_name": "Python 3.8.2 64-bit",
    "metadata": {
     "interpreter": {
      "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
     }
-   }
+   },
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -388,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2-final"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
