--- a/code/Quantum Teleportation/Quantum Teleportation.ipynb
+++ b/code/Quantum Teleportation/Quantum Teleportation.ipynb
@@ -20,7 +20,7 @@
     }
    ],
    "source": [
-    "%pip --quiet install qiskit pylatexenc git+https://github.com/qiskit-community/qiskit-textbook.git#subdirectory=qiskit-textbook-src\n",
+    "%pip --quiet install -r requirements.txt\n",
     "%matplotlib inline\n",
     "\n",
     "# Importing standard Qiskit libraries and configuring account\n",
@@ -149,8 +149,12 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.2 64-bit",
+   "metadata": {
+    "interpreter": {
+     "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    }
+   },
    "name": "python3"
   },
   "language_info": {
@@ -163,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.2-final"
   }
  },
  "nbformat": 4,
