run on binder and colab

--- a/code/Grover's Algorithm/Grover's Algorithm.ipynb
+++ b/code/Grover's Algorithm/Grover's Algorithm.ipynb
@@ -20,7 +20,7 @@
     }
    ],
    "source": [
-    "%pip --quiet install -r requirements.txt\n",
+    "%pip --quiet install qiskit matplotlib pylatexenc git+https://github.com/qiskit-community/qiskit-textbook.git#subdirectory=qiskit-textbook-src\n",
     "%matplotlib inline\n",
     "\n",
     "# Importing standard Qiskit libraries and configuring account\n",
